# PlausiDen-Stack

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/plausiden-hdc/: Cargo.toml
crates/plausiden-hdc/benches/: hdc_ops.rs
crates/plausiden-hdc/src/: lib.rs
crates/plausiden-hdc/tests/: properties.rs
crates/plausiden-stack/: Cargo.toml
crates/plausiden-stack/src/: entropy.rs  gated.rs  lib.rs  meta.rs  op.rs  sos.rs  stack.rs
docs/: ARCHITECTURE.md
