[workspace]
members = [
    "crates/plausiden-hdc",
    "crates/plausiden-stack",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "FSL-1.1-MIT"
repository = "https://github.com/thepictishbeast/PlausiDen-Stack"
authors = ["William Armstrong / PlausiDen"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
tracing = "0.1"
rustfft = "6"
rand = "0.8"
rand_chacha = "0.3"
rayon = "1.10"
proptest = "1"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.bench]
opt-level = 3
lto = "thin"
