[package]
name = "plausiden-stack"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Heterogeneous compositional Stack architecture on HDC substrate"

[dependencies]
plausiden-hdc = { path = "../plausiden-hdc" }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
tracing.workspace = true
rustfft.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rayon.workspace = true

[dev-dependencies]
proptest.workspace = true

[lints.rust]
unsafe_code = "deny"
missing_docs = "warn"
